# network-manager

./: .gitignore  ChangeLog  MAINTAINERS.snap  Makefile  Makefile.am  README.md  TODO.md  config.h.in  configure.ac  network-manager  networkmanager  run-tests.sh  snapcraft.yaml  spread.yaml  unstage.txt
.pc/: applied-patches
conf/: 00-everactive.conf  77-mm-usb-device-blacklist.rules  EveractiveAccess.nmconnection  NetworkManager.conf  dnsmasq-dbus.conf  enable-wol.conf
data/: Makefile.am  NetworkManager.service.in
debian/: changelog  rules
doc/: overview.md
docs/: configure-cellular-connections.md  configure-wifi-connections.md  configuring-cellular-connections.md  configuring-wifi-connections.md  edit-connections.md  enable-ethernet-support.md  explore-network-status.md  exploring-network-status.md  faq.md  index.md  installation.md  metadata.yaml  release-notes.md  report-bug.md  routing-tables.md
hooks/: configure  wol-by-default.sh
include/: NetworkManager.h
libnm/: libnm.ver  nm-setting-docs.xml
libnm-core/: nm-core-enum-types.c  nm-core-enum-types.h  nm-setting-wireless.c  nm-setting-wireless.h
libnm-glib/: libnm-glib.ver  nm-access-point.c  nm-access-point.h  nm-device-wifi.c  nm-object.c
libnm-util/: libnm-util.ver  nm-setting-wireless-security.c  nm-setting-wireless.c  nm-setting-wireless.h  nm-utils.c
manifests/: manifest-amd64.yaml  manifest-arm64.yaml  manifest-armhf.yaml  manifest-i386.yaml
patches/: add-snappy-support.patch  (+3 more)
src/settings/plugins/ofono/: Makefile.am  nm-ofono-connection.c  nm-ofono.xml  parser.c  parser.h  plugin.c
(+195 files in other folders)
